NxQuickRearCam: modified code for thread priority and device open
This patch modified code for adjusting thread priority
and added code for device open regardless of backgear detection
at an early stage.

Signed-off-by: Jaemi Bahn <jmbahn@nexell.co.kr>
Change-Id: I72dff0e0af75c5b5118d37ef8fe572eb018e4194
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/linux_apps_NxQuickRearCam/+/474919
Reviewed-by: SeongO Park <ray@nexell.co.kr>
Tested-by: SeongO Park <ray@nexell.co.kr>

--- a/apps/NxQuickRearCam/Makefile
+++ b/apps/NxQuickRearCam/Makefile
@@ -29,6 +29,7 @@ OBJS		:=	NX_DbgMsg.o \
 				NX_QuickRearCam.o \
 				NX_CRGBDraw.o \
 				NX_CCommand.o \
+				$(TOPDIR)/../../src/common/NX_ThreadUtils.o \
 
 #########################################################################
 #																		#
