NxQuickRearCam: changed library name
This patch changed library name to libnxquickrearcam from libnxrearcam
to avoid duplication with lib name of NxRearCam application.

Signed-off-by: Jaemi Bahn <jmbahn@nexell.co.kr>
Change-Id: Icca35ed08cc6ca30a24b69f755e0df7b020b49ed
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/linux_apps_NxQuickRearCam/+/479607
Reviewed-by: SeongO Park <ray@nexell.co.kr>
Tested-by: SeongO Park <ray@nexell.co.kr>

--- a/apps/NxQuickRearCam/Makefile
+++ b/apps/NxQuickRearCam/Makefile
@@ -42,7 +42,7 @@ LDFLAGS += \
 	-L$(SDKTARGETSYSROOT)/usr/lib \
 
 LIBS += -lrt -lpthread 
-LIBS += -lnxrearcam -lnxv4l2 -ldrm 
+LIBS += -lnxquickrearcam -lnxv4l2 -ldrm 
 LIBS += -lnxdeinterlace -ltsdeinterlacer
 
 #COBJS  = 
