NxQuickRearCam : modified make files for built-in source to BSP
This patch modified make files for built-in source to BSP

Signed-off-by: Jaemi Bahn <jmbahn@nexell.co.kr>
Change-Id: Id8491f3fe0325158756f3e90288335a8fb3c9d78
Reviewed-on: https://review.gerrithub.io/c/NexellCorp/linux_apps_NxQuickRearCam/+/481646
Reviewed-by: SeongO Park <ray@nexell.co.kr>
Tested-by: SeongO Park <ray@nexell.co.kr>

--- a/apps/NxQuickRearCam/Makefile
+++ b/apps/NxQuickRearCam/Makefile
@@ -2,23 +2,17 @@
 # Build options
 export TOPDIR	:=$(shell if [ "$$PWD" != "" ]; then echo $$PWD; else pwd; fi | sed s,.*users,/home/users,)
 
-CPPFLAGS = -Wall
-
 #########################################################################
 #																		#
 #								Includes								#
 #																		#
 #########################################################################
-#	Local Application Includes
-
-INCLUDES		?= -I./ -I$(SDKTARGETSYSROOT)/usr/include/drm
-INCLUDES		+= -I/$(SDKTARGETSYSROOT)/usr/include/nexell \
-			-I/$(SDKTARGETSYSROOT)/usr/include/libdrm \
-			-I$(SDKTARGETSYSROOT)/usr/include \
+INCLUDE	+= \
+			-I. \
 			-I$(TOPDIR)/../../src/common \
 			-I$(TOPDIR)/../../include \
 			-I$(TOPDIR)/../../include/drm \
-			
+
 #########################################################################
 #																		#
 #								Sources									#
@@ -36,17 +30,12 @@ OBJS		:=	NX_DbgMsg.o \
 #								Library									#
 #																		#
 #########################################################################
+LIBS += -lrt -lpthread
+LIBS += -L$(TOPDIR)/../../lib/linux -lnxquickrearcam -lnxdeinterlace -ltsdeinterlacer
+LIBS += -lnx_v4l2 -ldrm
 
-LDFLAGS += \
-	-L$(TOPDIR)/../../lib/linux \
-	-L$(SDKTARGETSYSROOT)/usr/lib \
 
-LIBS += -lrt -lpthread 
-LIBS += -lnxquickrearcam -lnxv4l2 -ldrm 
-LIBS += -lnxdeinterlace -ltsdeinterlacer
 
-#COBJS  = 
-#COBJS += $(wildcard ../../lib/linux/deinterlacer.a)
 #########################################################################
 #																		#
 #								Target									#
@@ -56,24 +45,42 @@ LIBS += -lnxdeinterlace -ltsdeinterlacer
 TARGET		:= NxQuickRearCam
 
 
-######################################################################
-# Build
+#########################################################################
+#																		#
+#								Build									#
+#																		#
+#########################################################################
+# Build option
 
-CFLAGS		+= -fPIC
-CPPFLAGS	+= -fPIC -Wall
-CPPFLAGS 	+= -O3 $(INCLUDES) $(LDFLAGS) $(LIBS) -static -pthread 
+CFLAGS	+= -O3 -fPIC -Wall
 
-
-SRCS = $(OBJS:.o=.cpp) 
-
-$(TARGET): $(OBJS) $(COBJS)
-	$(CXX) -o $@ $(CPPFLAGS) $(INCLUDES) $(OBJS) $(LIBS) $(COBJS)
 
 
 all: $(TARGET)
 
+$(TARGET): $(OBJS) $(COBJS)
+	$(CXX) -o $@ $(CFLAGS) $(INCLUDE) $(LDFLAGS) $(OBJS) $(LIBS) $(COBJS)
 
-.PHONY: clean
+install:
 
 clean :
-	rm -rf $(OBJS) $(TARGET) 
+	rm -rf $(TARGET) *.o .depend
+
+distclean: clean
+
+#########################################################################
+# Dependency
+ifeq (.depend,$(wildcard .depend))
+include .depend
+endif
+
+SRCS = $(OBJS:.o=.cpp)
+INCS := $(INCLUDE)
+depend dep:
+	$(CC) -M $(CFLAGS) $(INCS) $(SRCS) > .depend
+
+%.o: %.c
+	$(CC) $(CFLAGS) $(INCS) -c -o $@ $<
+
+%.o: %.cpp
+	$(CXX) $(CFLAGS) $(INCS) -c -o $@ $<
