apps: quick_rearcam: disalbe thundersoft deinterlace
This patch disalbes thundersoft deinterlace algorithm.

Signed-off-by: chungho.shin <chungho.shin@coasianexell.com>
Change-Id: I9bb7203a16b51e43753d0e7f03c262d8956414f8

--- a/src/librearcam/Makefile
+++ b/src/librearcam/Makefile
@@ -57,7 +57,7 @@ TARGET		:= libnxquickrearcam.a
 # Build option
 
 CFLAGS	+= -O3 -fPIC -Wall -static
-CFLAGS 	+= -DTHUNDER_DEINTERLACE_TEST
+#CFLAGS 	+= -DTHUNDER_DEINTERLACE_TEST
 OBJS := $(CXXOBJS) $(COBJS)
 
 
