quick rear cam: add flip function
This patch adds vertical/horizon flip function.

Signed-off-by: SeongO Park <ray@coasia.com>
Change-Id: I5d980721944dc8b9d9721ceb923086edafc32352

--- a/src/librearcam/Makefile
+++ b/src/librearcam/Makefile
@@ -23,6 +23,7 @@ INCLUDE		+=  \
 
 CXXOBJS		:=	NX_CV4l2Camera.o \
 				NX_CV4l2VipFilter.o \
+				NX_CFlipFilter.o \
 				NX_CDeinterlaceFilter.o \
 				NX_CVideoRenderFilter.o \
 
